Fixed spacing between start and end time (event form)  on mobile

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -312,6 +312,13 @@ hr {
   display: none;
 }
 
+.form-group > .col-sm-6 {
+  margin-bottom: 15px;
+  @media (max-width: $screen-sm-max) {
+    margin-bottom: 0;
+  }
+}
+
 
 // Effects
 .desaturate {
